staging/reports_analytics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reports_analytics
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: reports_analytics
  ports:
  - port: 80
    targetPort: 8006
